--- a/note.html
+++ b/note.html
@@ -8,7 +8,7 @@
 <meta name=”apple-mobile-web-app-capable” content=”yes” />
 <meta name="keywords" content="yingnote,yingnote.com">
 <meta name="description" content="yingnote, WanYing Note!">
-<title class="lang">YingNote, wanying笔记</title>
+<title class="lang">YingNote, WanYing 笔记</title>
 
 <link href="public/css-libs/bootstrap.css" rel="stylesheet" />
 <!-- 先加载, 没有样式, 宽度不定 -->
@@ -649,7 +649,7 @@ function log(o) {
 <script src="public/js/lang.js"></script>
 <script src="public/js/common.js"></script>
 <script>
-var UrlPrefix = 'app://leanote';
+var UrlPrefix = 'app://yingnote';
 var UserInfo = {};
 window.requireNode = window.require;
 window.nodeRequire = window.require;
