--- a/login.html
+++ b/login.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="keywords" content="leanote,leanote.com">
-<meta name="description" content="leanote, Not Just A Notepad!">
-<meta name="author" content="leanote">
-<title class="lang">Leanote login</title>
+<meta name="keywords" content="yingnote,yingnote.cn">
+<meta name="description" content="YingNote, WanYing 笔记!">
+<meta name="author" content="yingnote">
+<title class="lang">YingNote login</title>
 <link href="public/css-libs/bootstrap.css" rel="stylesheet">
 <link href="public/css-libs/font-awesome-4.2.0/css/font-awesome.css" rel="stylesheet">
 <link href="public/css/login.css" rel="stylesheet">
@@ -27,13 +27,13 @@ if(process.platform != 'darwin') {
 	</div>
 
 	<div class="bottom">
-		<a id="localAccount" onclick="openExternal('https://leanote.com/register')"  class="lang localAccount">Sign up Leanote</a>
+		<a id="localAccount" onclick="openExternal('https://yingnote.cn/register')"  class="lang localAccount">Sign up YingNote</a>
 
 		<a id="customServer" class="lang customServer">Sign in to Self-hosted Service</a>
 
 		<!-- <a id="localAccount" class="lang localAccount">Create Local Account</a> -->
 
-		<a id="loginWithLeanote" class="lang loginWithLeanote">Sign in to Leanote</a>
+		<a id="loginWithLeanote" class="lang loginWithLeanote">Sign in to YingNote</a>
 	</div>
 
 	<section id="box">
@@ -41,7 +41,7 @@ if(process.platform != 'darwin') {
 		<div>
 			<div class="faq" onclick="openExternal('https://github.com/leanote/desktop-app/issues/225')"><i class="fa fa-question-circle"></i></div>
 			<h1 id="logo">
-				<a onclick="openExternal('https://leanote.com')" id="loadingLogo" title="leanote">
+				<a onclick="openExternal('https://yingnote.cn')" id="loadingLogo" title="YingNote">
 					<span class="logo"></span>
 				</a>
 				<span class="lang customServer">Self-hosted Service</span>
@@ -78,7 +78,7 @@ if(process.platform != 'darwin') {
 				<form>
 					<div class="formContainer">
 						<div class="form-group form-group-1 host-group" id="hostGroup">
-						    <input type="text" placeholder="Host, https://leanote.com" class="form-control lang-placeholder" id="host" name="host">
+						    <input type="text" placeholder="Host, https://yingnote.cn" class="form-control lang-placeholder" id="host" name="host">
 						</div>
 
 						<div class="form-group form-group-1">
@@ -94,9 +94,9 @@ if(process.platform != 'darwin') {
 					</div>
 
 					<div class="clearfix btns">
-						<a onclick="openExternal('https://leanote.com/findPassword')" class="pull-right m-t-xs"><small class="lang">Forget password?</small></a>
+						<a onclick="openExternal('https://yingnote.cn/findPassword')" class="pull-right m-t-xs"><small class="lang">Forget password?</small></a>
 						<!--
-						<a onclick="openExternal('https://leanote.com/register')" class="pull-right m-t-xs" style="margin-right: 10px"><small class="lang">Sign up</small></a>
+						<a onclick="openExternal('https://yingnote.cn/register')" class="pull-right m-t-xs" style="margin-right: 10px"><small class="lang">Sign up</small></a>
 						-->
 					</div>
 				</form>
