20170331 1. add the app icon and tray icon

--- a/note.html
+++ b/note.html
@@ -691,7 +691,7 @@
     window.requireNode = window.require;
     window.nodeRequire = window.require;
     window.require = undefined;
-    window.debug = true;
+    window.debug = false;
 </script>
 
 <!-- 渲染view -->
